<resources>
    <string name="app_name">ABergestion</string>
    <string name="button_valider">Valider</string>
    <string name="textView_bienvenue">Bienvenue !</string>
    <string name="textView_remplirChamps">Veuillez remplir les champs pour continuer :</string>
    <string name="editText_nom">Nom</string>
    <string name="editText_prenom">Prénom</string>
    <string name="passwordNum_motdepasse">Mot de passe</string>
    <string name="passwordNum_confirmerMotdepasse">Confirmer mot de passe</string>
    <string name="budget_restant">000,00 euro</string>
    <string name="AlertDialog_champsrempli">Les champs doivent tous être remplis !</string>
    <string name="AlertDialog_passwordIdentiques">Le mot de passe et la confirmation de mot de passe doivent être identiques !</string>
    <string name="AlertDialog_queChiffres">Le mot de passe ne doit contenir que des chiffres !</string>
    <string name="AlertDialog_champsNomPrenom">Les champs Nom et Prenom ne doivent contenir que des lettres, minuscules ou Majuscules, et \'-\' et l\'espace !</string>
    <string name="textView_choixGestion">Choisissez la gestion :</string>
    <string name="button_gestionBudget">Gestion de Budget</string>
    <string name="button_gestionStock">Gestion de Stock</string>
    <string name="textView_modifyPassword">Modifier votre mot de passe</string>
    <string name="passwordNum_lastPassword">Ancien mot de passe</string>
    <string name="passwordNum_newPassword">Nouveau mot de passe</string>
    <string name="button_modifyPassword">Modifier mot de passe</string>
    <string name="alertDialog_impossibleSaveUser">Impossible de sauver l\'utilisateur</string>
    <string name="alertDialog_creationUser1">L\'utilisateur</string>
    <string name="alertDialog_creationUser2" />
    <string name="alertDialog_creationUser3">a été créer !</string>
    <string name="alertDialog_ok">Ok</string>
    <string name="alertDialog_falseLastPW">Votre ancien mot de passe est faux</string>
    <string name="alertDialog_modifyPW">Votre mot de passe a été modifié</string>
    <string name="alertDialog_confirmationPWDifferent">La confirmation de mot de passe est différente du mot de passe</string>
    <string name="button_erase">Effacer</string>
    <string name="textView_enterPW">Entrez votre mot de passe :</string>
    <string name="alertdialog_choix_perio">Periodicité</string>

    <!-- Bouton numerique -->
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>

    <!-- Gestion du stock-->
    <string name="textView_getionStock">Gestion de Stock</string>
    <string name="button_groceryList">Liste de Courses</string>
    <string name="button_productList">Liste des produits</string>
    <string name="button_back">Retour</string>
    <string name="button_add">+</string>
    <string name="spinner_sort_prompt">Trier</string>

    <string name="alertDialog_wrongPW">Mauvais mot de passe !</string>
    <string name="editText_productName">Nom du produit</string>
    <string name="editText_quantity">Quantité</string>
    <string name="editText_productType">Forme du produit</string>
    <string name="alertDialog_addProduct">Ajouter un produit :</string>
    <string name="text_add">Ajouter</string>
    <string name="toast_productAdded">Produit ajouté</string>
    <string name="alertDialog_afficher_detail_dr">Détails :</string>
    <string name="alertDialog_chooseCategory">La catégorie doit être choisie !</string>
    <string name="string_category">Catégorie :</string>
    <string name="string_cancel">Annuler</string>
    <string name="string_alimentary">Alimentaire</string>
    <string name="textView_ourProducts">Vos Produits</string>
    <string name="editText_purchaseDate">Date d\'achat</string>
    <string name="editText_expirationDate">Date de péremption</string>
    <string name="editText_numbrePrevent">Prévenir quand il reste</string>

</resources>
